--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,23 +1,76 @@
+*{
+  margin: 0px;
+  padding: 0px;  
+}
 .nav-item{
     min-width: 100px;
     font-size: 20px;
-   
 }
-.nav-link{
-    color:white;
+li a{
+  color:white;
 }
-a:hover{
-    color:red;
-}
-
-.sidenav{
-    height: 730px;
-    width: 300px;
-    background-color: gray;
+li a:hover{
+  text-decoration: none;
 }
 .image{
     border-radius: 50%;
 }
-.navbar-brand{
-    color:white
+ul.sidebaritems{
+  margin-top: 100px;
+  list-style-type: none;
+}
+ul.sidebaritems li{
+  text-decoration: none;
+}
+.sidebar{
+  position: fixed;
+  width: 250px;
+  height: 100%;
+  left:-250px;
+  background-color:rgb(57,68,77);
+  transition: left 0.4s ease;
+}
+nav ul li{
+  line-height: 40px;
+}
+nav ul li a{
+  font-size: 20px;
+  padding-left: 40px;
+  width: 100%;
+  display: block;
+}
+nav ul li a:hover{
+  color:rgb(188, 206, 221);
+  
+}
+nav ul ul li{
+  border-bottom: none;
+}
+.fa{
+  color:white;
+}
+.btn{
+  cursor: pointer;
+  transition: left 0.4s ease;
+}
+.btn.click{
+  left: 260px;
+}
+.btn.click i::before{
+  content: '\f0c9';
+}
+.sidebar.show{
+  left:0px;
+}
+.btn i{
+  font-size: 30px;
+  line-height:25px ;
+}
+.img{
+  position: absolute;
+  left:25px;
+  top:114px;
+}
+.img i{
+  font-size: 30px;
 }
