--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,7 +16,8 @@ li a:hover{
     border-radius: 50%;
 }
 ul.sidebaritems{
-  margin-top: 100px;
+  margin-top: 120px;
+  margin-left: 60px;
   list-style-type: none;
 }
 ul.sidebaritems li{
@@ -68,9 +69,15 @@ nav ul ul li{
 }
 .img{
   position: absolute;
-  left:25px;
-  top:114px;
+  left:80px;
+  top:130px;
 }
 .img i{
   font-size: 30px;
 }
+.headings{
+  color:white;
+  position: absolute;
+  top:85px;
+}
+
