--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,12 +2,15 @@
   margin: 0px;
   padding: 0px;  
 }
+.navbar{
+  background-color: rgb(33,150,243);
+}
 .nav-item{
-    min-width: 140px;
-    font-size: 20px;
+    min-width: 30px;
 }
 li a{
-  color:white;
+  color:rgb(156, 154, 158);
+  font-size: 18px;
 }
 li a:hover{
   text-decoration: none;
@@ -17,11 +20,11 @@ li a:hover{
     
 }
 ul.sidebaritems{
-  margin-top: 120px;
-  margin-left: 40px;
+  margin-top: 80px;
+  margin-left: 0px;
   list-style-type: none;
 }
-ul.sidebaritems li{
+ul.sidebaritems li {
   text-decoration: none;
 }
 .sidebar{
@@ -36,13 +39,13 @@ nav ul li{
   line-height: 40px;
 }
 nav ul li a{
-  font-size: 20px;
-  padding-left: 40px;
+  padding-left: 30px;
+  padding-top: 20px;
   width: 100%;
   display: block;
 }
 nav ul li a:hover{
-  color:rgb(188, 206, 221);
+  color:rgb(230, 235, 240);
   
 }
 nav ul ul li{
@@ -56,38 +59,34 @@ nav ul ul li{
   left: 260px;
 }
 .btn.click i::before{
-  content: '\f0c9';
+  content: '';
 }
 .sidebar.show{
   left:0px;
 }
 .btn i{
-  font-size: 30px;
-  line-height:25px ;
+  font-size: 20px;
+  line-height:20px ;
 }
 .img i{
   font-size: 30px;
 }
-.fa{
-  color:white;
+#icon{
+  font-size: 25px;
+  color: rgb(157, 205, 228);
+  margin-top: 10px;
+  margin-left: -8px;
 }
-.icon{
-  position: absolute;
-  top:130px;
-  left:55px;
+#brand{
+  margin:3px;
+  font-size: 25px;
+  color:rgb(255,255,255);
 }
-.icon3{
-  position: absolute;
-  top:214px;
-  left:55px;
+#notfication{
+  color: rgb(157, 205, 228);
+  font-size: 25px;
+  margin-top: 10px;
 }
-.icon4{
-  position: absolute;
-  top:252px;
-  left:55px;
-}
-.icon5{
-  position: absolute;
-  top:290px;
-  left:55px;
+.active{
+  background-color: rgb(47,57,64);
 }
