--- a/card1.css
+++ b/card1.css
@@ -12,30 +12,29 @@ html{
     border-radius: 50%;
 }
 #brand{
-    margin:3px;
-    font-size: 25px;
-    color:rgb(255,255,255);
-  }
-  #notfication{
-    color: rgb(157, 205, 228);
-    font-size: 25px;
-    margin-top: 7px;
-    margin-right: -9px;
-  }
-  #side{
-      background-color: rgb(67, 172, 185);
-  }
-  .chapters{
-      margin-top: 200px;
-  }
-  ul li a {
-      color:rgb(255, 0, 98);
-      margin-left: 100px;
-      font-size: 20px;
-      padding: 10px;
-      
-  }
-  ul li a:hover{
-      text-decoration: none;
-  }
-  
+  margin:3px;
+  font-size: 25px;
+  color:rgb(255,255,255);
+}
+#notfication{
+  color: rgb(157, 205, 228);
+  font-size: 25px;
+  margin-top: 7px;
+  margin-right: -9px;
+}
+#side{
+    background-color: rgb(255, 255, 255);
+    margin-top: 110px;
+}
+ul li {
+  list-style-type: none;
+  margin-left: 50px;
+  font-size: 20px;
+}
+ul li a:hover{
+  text-decoration: none;
+}
+.btn:focus,.btn:active{
+  box-shadow: none !important;
+  outline: none !important;
+}
