--- a/stylesheet.css
+++ b/stylesheet.css
@@ -17,8 +17,8 @@ li a:hover{
     
 }
 ul.sidebaritems{
-  margin-top: 80px;
-  margin-left: 0px;
+  /* margin-top: 80px; */
+  /* margin-left: 0px; */
   list-style-type: none;
 }
 ul.sidebaritems li {
@@ -26,7 +26,7 @@ ul.sidebaritems li {
 }
 .sidebar{
   position: fixed;
-  width: 250px;
+  width: 210px;
   height: 100%;
   left:-250px;
   background-color:rgb(57,68,77);
@@ -35,6 +35,9 @@ ul.sidebaritems li {
 }
 .hide{
   left: -250px;
+}
+.show{
+  left:0px;
 }
 nav ul li{
   line-height: 40px;
@@ -52,20 +55,17 @@ nav ul li a:hover{
 nav ul ul li{
   border-bottom: none;
 }
-.btn{
+.menubtn{
   cursor: pointer;
   transition: left 0.4s ease;
 }
-.btn.click{
+.menubtn.click{
   left: 260px;
 }
-.btn.click i::before{
+.menubtn.click i::before{
   content: '';
 }
-.sidebar.show{
-  left:0px;
-}
-.btn i{
+.menubtn i{
   font-size: 20px;
   line-height:20px ;
 }
